--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^12.5.0",
     "gsap": "^3.13.0",
     "lucide-react": "^0.462.0",
+    "mathjs": "^14.9.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.9.5",
