--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
-    "@react-three/drei": "^9.122.0",
-    "@react-three/fiber": "^8.18.0",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "firebase": "^12.5.0",
     "gsap": "^3.13.0",
     "lucide-react": "^0.462.0",
+    "maath": "^0.10.8",
     "mathjs": "^14.9.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.9.5",
     "tailwind-merge": "^2.5.5",
-    "three": "^0.163.0"
+    "three": "^0.167.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.12",
