--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build && node scripts/generate-static.cjs && node scripts/generate-sitemap.cjs",
+    "start": "serve -s dist -l ${PORT:-3000}",
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
@@ -26,6 +27,7 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.9.5",
+    "serve": "^14.2.5",
     "tailwind-merge": "^2.5.5",
     "three": "^0.167.1"
   },
